Fix role tab to be more usable/readable

--- a/main.css
+++ b/main.css
@@ -428,24 +428,20 @@ button,
   justify-content: space-between;
   flex: 1;
 }
-.role-tab,
 .lifepath-tab {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-template-areas: "notes-pane lifepath-pane";
 }
-.role-tab .lifepath-section,
 .lifepath-tab .lifepath-section {
   grid-area: lifepath-pane;
   margin: 5px;
 }
-.role-tab .notes-section,
 .lifepath-tab .notes-section {
   grid-area: notes-pane;
   margin: 5px;
 }
-.role-tab .notes-section .note-pad,
 .lifepath-tab .notes-section .note-pad {
   display: flex;
   height: 425px;
